# IntelCameraInterface

./: CMakeLists.txt
include/: intelvideosource.h
src/: CMakeLists.txt  decodeUV.cpp  intelvideosource.cpp  main.cpp  syncQueueTest.cpp  testIVSclass.cpp
